llvm/test/tools/llubi/assume_poison_align.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  call void @llvm.assume(i1 true) ["align"(ptr poison, i32 4)]
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @llvm.assume(i1 true) [ "align"(ptr poison, i32 4) ] at @main
; CHECK-NEXT: Immediate UB detected: Assume on poison pointer.
; CHECK-NEXT: error: Execution of function 'main' failed.
